--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pavan Webserver",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "keywords": [
     "Pavan",
@@ -18,5 +19,8 @@
     "express": "^4.17.1",
     "hbs": "^4.0.4",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
